fix snackbar overlapping siderbar

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: flex-end;
   max-width: 100%;
-  z-index: 999;
+  z-index: 10;
   overflow: hidden;
 }
 
@@ -74,7 +74,6 @@
 .js-snackbar {
   display: inline-flex;
   box-sizing: border-box;
-  color: #eee;
   font-size: 16px;
   background-color: white;
   vertical-align: bottom;
@@ -129,18 +128,6 @@
 
 .js-snackbar__status.js-snackbar--info {
   @apply bg-sky-600;
-}
-
-.js-snackbar__icon {
-  display: block;
-  border: 2px solid white;
-  font-weight: bold;
-  border-radius: 20px;
-  height: 20px;
-  width: 20px;
-  text-align: center;
-  margin: 0 5px;
-  font-family: monospace;
 }
 
 .js-snackbar__action {
